# UBB-FMI

./: README.md
First_Year/Second-Semester/Grafuri/pregatire_test_1/: CMakeLists.txt
First_Year/Second-Semester/Grafuri/pregatire_test_1/enunturi_extra/: ex1.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/lab3/: ex1  ex1.cpp  ex1v2  ex1v2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test1/: ex1.cpp  ex2.cpp  test1v2ex2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test2/: ex1.cpp  ex2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test2v2/: ex1.cpp  ex2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test3/: ex1.cpp  ex2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test3v2/: ex2.cpp
First_Year/Second-Semester/Grafuri/pregatire_test_1/test4/: ex2.cpp
First_Year/Second-Semester/OOP/Laboratoare/Clase/: CMakeLists.txt  main.cpp
First_Year/Second-Semester/OOP/Laboratoare/Clase/UI/: UI.cpp  UI.h
First_Year/Second-Semester/OOP/Laboratoare/Clase/domain/: Pet.cpp  Pet.h
First_Year/Second-Semester/OOP/Laboratoare/Clase/repository/: PetRepo.cpp  PetRepo.h
First_Year/Second-Semester/OOP/Laboratoare/Clase/service/: PetStore.cpp  PetStore.h
First_Year/Second-Semester/OOP/Laboratoare/Clase/tests/: test.cpp  test.h
First_Year/Second-Semester/OOP/Laboratoare/lab13-14/: CMakeLists.txt  app_coordinator.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab13-14/Service/: MedService.cpp  MedService.h  Observer.h
First_Year/Second-Semester/OOP/Laboratoare/lab13-14/UI/: GUI.cpp  GUI.h  RecipeCRUDGUI.h  RecipeReadOnlyGUI.h  RecipeTableModel.h
First_Year/Second-Semester/OOP/Laboratoare/lab13-14/domain/: Medicine.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab13-14/tests/: tests.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab2/: CMakeLists.txt  main.c
First_Year/Second-Semester/OOP/Laboratoare/lab2 - structuri de date/: CMakeLists.txt
First_Year/Second-Semester/OOP/Laboratoare/lab2 - structuri de date/UI/: ui.h
First_Year/Second-Semester/OOP/Laboratoare/lab2 - structuri de date/repository/: repository.c  repository.h
First_Year/Second-Semester/OOP/Laboratoare/lab2 - structuri de date/tests/: teste.c
First_Year/Second-Semester/OOP/Laboratoare/lab2/UI/: ui.c  ui.h
First_Year/Second-Semester/OOP/Laboratoare/lab2/domain/: medicament.h
First_Year/Second-Semester/OOP/Laboratoare/lab2/repository/: repository.c  repository.h
First_Year/Second-Semester/OOP/Laboratoare/lab2/service/: service.c  service.h
First_Year/Second-Semester/OOP/Laboratoare/lab2/tests/: teste.c
First_Year/Second-Semester/OOP/Laboratoare/lab3/: CMakeLists.txt  CodeReviewTemplate.odt  main.c  program_valgrind
First_Year/Second-Semester/OOP/Laboratoare/lab3/domain/: domain.c  domain.h  medicament.c
First_Year/Second-Semester/OOP/Laboratoare/lab3/lista/: MyList.c  MyList.h
First_Year/Second-Semester/OOP/Laboratoare/lab3/main/: main.c
First_Year/Second-Semester/OOP/Laboratoare/lab3/repository/: repository.c  repository.h
First_Year/Second-Semester/OOP/Laboratoare/lab3/service/: service.c  service.h
First_Year/Second-Semester/OOP/Laboratoare/lab3/teste/: teste.c  teste.h
First_Year/Second-Semester/OOP/Laboratoare/lab3/ui/: ui.c  ui.h
First_Year/Second-Semester/OOP/Laboratoare/lab4/: CMakeLists.txt  app  app-main.gcno  main.c  main.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab4 - template/: CMakeLists.txt  main.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab4 - template/domain/: Medicine.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab4 - template/repository/: MedRepository.cpp  MedRepository.h  MyVector.h
First_Year/Second-Semester/OOP/Laboratoare/lab4 - template/service/: MedService.h
First_Year/Second-Semester/OOP/Laboratoare/lab4 - template/tests/: tests.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab4/Repository/: MedRepository.cpp  MedRepository.h  RepositoryException.h
First_Year/Second-Semester/OOP/Laboratoare/lab4/Service/: MedService.cpp  MedService.h  service.c  service.h
First_Year/Second-Semester/OOP/Laboratoare/lab4/UI/: UI.cpp  UI.h  ui.c
First_Year/Second-Semester/OOP/Laboratoare/lab4/domain/: Medicine.cpp  Medicine.h  medicament.c  medicament.h
First_Year/Second-Semester/OOP/Laboratoare/lab4/tests/: teste.h  tests.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab5_it1/: CMakeLists.txt
First_Year/Second-Semester/OOP/Laboratoare/lab5_it1/UI/: UI.h
First_Year/Second-Semester/OOP/Laboratoare/lab5_it1/domain/: Medicine.h
First_Year/Second-Semester/OOP/Laboratoare/lab5_it1/repository/: RepositoryException.h
First_Year/Second-Semester/OOP/Laboratoare/lab5_it1/tests/: tests.cpp
First_Year/Second-Semester/OOP/Laboratoare/lab6/: CMakeLists.txt  app-tests.gcno
First_Year/Second-Semester/OOP/Laboratoare/lab6/Repository/: MedRepository.cpp  MedRepository.h  RepositoryException.h
First_Year/Second-Semester/OOP/Laboratoare/lab6/Service/: MedService.cpp  MedService.h
First_Year/Second-Semester/OOP/pregatire_simulare/furniture/: CMakeLists.txt  main.cpp
First_Year/Second-Semester/OOP/pregatire_simulare/pregatire_examen_2/: CMakeLists.txt  app_coordinator.cpp  repo.txt  testSkirts.txt
First_Year/Second-Semester/OOP/pregatire_simulare/radation/: CMakeLists.txt  main.cpp
First_Year/Second-Semester/OOP/pregatire_simulare/simulare_ex_masina/: CMakeLists.txt  app_coordinator.cpp  cars.txt  tests_cars.txt
First_Year/Second-Semester/OOP/simulare_oop/: CMakeLists.txt  main.cpp
First_Year/Second-Semester/OOP/simulare_oop/Domain/: Postare.cpp  Postare.h
First_Year/Second-Semester/OOP/simulare_oop/Repository/: Repository.cpp  Repository.h
First_Year/Second-Semester/OOP/simulare_oop/Service/: Service.cpp  Service.h
First_Year/Second-Semester/OOP/simulare_oop/UI/: UI.cpp  UI.h
First_Year/Second-Semester/OOP/simulare_oop/tests/: Tests.cpp  Tests.h
First_Year/Second-Semester/SDA/Cursuri/: CMakeLists.txt
First_Year/Second-Semester/SDA/Labs/TAD Coada cu Prioritati/: CMakeLists.txt
First_Year/Second-Semester/SDA/Labs/TAD Vector Dinamic/: CMakeLists.txt
(+447 files in other folders)
