cmake_minimum_required(VERSION 3.26)
project(pregatire_test_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(pregatire_test_1
        #test1/ex1.cpp
        #test1/ex2.cpp
        #test1/test1v2ex2.cpp
        #test2/ex1.cpp
        #test2/ex2.cpp
        #test2v2/ex1.cpp
        #test2v2/ex2.cpp
        #test3/ex1.cpp
        #test3/ex2.cpp
        #test3v2/ex2.cpp
        test4/ex2.cpp)
